# ROS

./: Package Path~  README.md  depth registration command  graf204.yaml  setup.sh
catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
catkin_ws/devel/include/beginner_tutorials/: AddTwoInts.h  AddTwoIntsRequest.h  AddTwoIntsResponse.h  Button.h  ButtonRequest.h  ButtonResponse.h  Num.h
catkin_ws/devel/include/pick/: Button.h  ButtonRequest.h  ButtonResponse.h  Confirm_Button.h  Confirm_ButtonRequest.h  Confirm_ButtonResponse.h  Num.h  Reset_Button.h  Reset_ButtonRequest.h  Reset_ButtonResponse.h
catkin_ws/devel/lib/beginner_tutorials/: listener  talker
catkin_ws/devel/lib/learning_image_transport/: learning_image_transport_node
catkin_ws/devel/lib/my_pcl_tutorial/: example  openni_save_pcd
catkin_ws/devel/lib/pick/: interactive_marker_test  marker_test  picked_icp  picked_segmentation  publish_instruction_image  publish_part_image  publish_scene  study_buttons  test1  transform_test
catkin_ws/devel/lib/pkgconfig/: beginner_tutorials.pc  industrial_extrinsic_cal.pc  learning_image_transport.pc  me539.pc  mh5f_arm_only.pc  mort.pc  my_pcl_tutorial.pc  pick.pc  publish_image.pc  spheres.pc
catkin_ws/devel/lib/publish_image/: publish_image  publish_random_image
catkin_ws/devel/lib/spheres/: picked_icp_sphere  picked_segmentation_sphere  picked_segmentation_sphere_offline  sphere_reporting
catkin_ws/src/beginner_tutorials/: CMakeLists.txt  CMakeLists.txt~  CMakeLists0.txt  package.xml  package.xml~
catkin_ws/src/beginner_tutorials/launch/: rviz_with_pointcloud.launch
catkin_ws/src/beginner_tutorials/src/: button_call.py  button_call.py~  listener.cpp  reporting_with_server.py  reporting_with_server.py~  talker.cpp  talker.cpp~  talker.py  talker.py~  test2_report_subscribed_variables.py  test2_report_subscribed_variables.py~
catkin_ws/src/beginner_tutorials/srv/: Button.srv  Button.srv~
catkin_ws/src/me539/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
catkin_ws/src/me539/src/: blob_tracker.py  blob_tracker.py~  follow_blobs.py  follow_blobs.py~  follow_blobs_avoid.py  follow_blobs_avoid.py~  follower.py  follower.py~  pointer.numpy.xy.py~  pointer.py  pointer.py~  pointer.xy.py~  stopper.py
catkin_ws/src/mh5f_arm_only/: .setup_assistant  CMakeLists.txt  package.xml
catkin_ws/src/mh5f_arm_only/config/: joint_limits.yaml  mh5f.srdf
catkin_ws/src/mh5f_arm_only/launch/: default_warehouse_db.launch  demo_online.launch  demo_online.launch~  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
catkin_ws/src/mh5f_description/: mainpage.dox  mainpage.dox~  manifest.xml~
catkin_ws/src/mh5f_description/.svn/: all-wcprops  entries
catkin_ws/src/mort/: CMakeLists.txt  package.xml~
catkin_ws/src/my_pcl_tutorial/: CMakeLists.txt  CMakeLists.txt~  package.xml~
catkin_ws/src/pick/: CMakeLists.txt  CMakeLists.txt~  package.xml~  pick.launch  pick_offline.launch~
catkin_ws/src/pick/src/pcl_reference_examples/conditional_removal_color/: CMakeLists.txt  CMakeLists.txt~  conditional_removal_color.cpp  conditional_removal_color.cpp~  conditional_removal_color_outlier.cpp  conditional_removal_color_outlier_with_planar.cpp  conditional_removal_color_outlier_with_planar.cpp~
catkin_ws/src/pick/src/pcl_reference_examples/correspondence_grouping/: CMakeLists.txt  correspondence_grouping_with_icp.cpp
catkin_ws/src/pick/src/pcl_reference_examples/filters/: CMakeLists.txt  CMakeLists.txt~
catkin_ws/src/pick/src/pcl_reference_examples/iterative_closest_point/: CMakeLists.txt  CMakeLists.txt~  iterative_closest_point_nl.cpp  iterative_closest_point_nl.cpp~  iterative_closest_point_single.cpp  iterative_closest_point_single.cpp~  iterative_closest_point_with_input.cpp  iterative_closest_point_with_input.cpp~
catkin_ws/src/pick/src/pcl_reference_examples/kinect/: CMakeLists.txt  exmaple.cpp  kinect_save_pcd.cpp~  kinect_viewer_stripped.cpp  kinect_viewer_stripped.cpp~  kinect_visualizer.cpp  kinect_visualizer.cpp~  kinect_visualizer2.cpp~  openni_save_pcd.cpp~
catkin_ws/src/pick/src/pcl_reference_examples/pcl_visualizer/: CMakeLists.txt  CMakeLists.txt~  pcl_visualizer_crop.cpp  pcl_visualizer_crop.cpp~  pcl_visualizer_demo.cpp~  pcl_visualizer_kinect.cpp~  pcl_visualizer_passthrough.cpp  pcl_visualizer_passthrough.cpp~  pcl_visualizer_picked_rgb.cpp  pcl_visualizer_picked_rgb.cpp~  pcl_visualizer_picked_segment.cpp  pcl_visualizer_picked_segment.cpp~  pcl_visualizer_stripped_down.cpp  pcl_visualizer_stripped_down.cpp~  pose  pose~
catkin_ws/src/pick/src/pcl_reference_examples/segment_align/: CMakeLists.txt  CMakeLists.txt~  live_segment_downsample_translate_align.cpp  live_segment_downsample_translate_align.cpp~  live_segment_downsample_translate_align_rotate.cpp  live_segment_downsample_translate_align_rotate.cpp~  live_viewer_start.cpp  live_viewer_start.cpp~  segment_align.cpp  segment_align.cpp~  segment_downsample_translate_align.cpp~  segment_downsample_translate_align_live.cpp  segment_downsample_translate_align_live.cpp~  segment_translate_align.cpp  segment_translate_align.cpp~
catkin_ws/src/pick/src/pcl_reference_examples/translate_to_pick/: CMakeLists.txt  CMakeLists.txt~  translate_to_pick.cpp  translate_to_pick.cpp~
catkin_ws/src/publish_image/: CMakeLists.txt  CMakeLists.txt~  package.xml~
catkin_ws/src/spheres/: CMakeLists.txt  CMakeLists.txt~  pick_sphere.launch  pick_sphere_offline.launch  pick_sphere_offline.launch~  pick_sphere_online_reporting.launch  pick_sphere_onlines_reporting.launch~
stacks/: .rosinstall  setup.sh
stacks/lab1/: lab1.launch  lab1.launch~  launch command  mainpage.dox  manifest.xml  manifest.xml~
stacks/lab1/src/: lab1.py~  move (lab1).py  move.py~  move_basic.py
stacks/lab2/: mainpage.dox  manifest.xml
stacks/lab2/src/: move.py  move.py~
(+207 files in other folders)
